# spam-rater-rpc-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  local_inference.py  requirements.txt
src/: config.rs  main.rs
