[package]
name = "rpc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
rpc-agent = { version = "0.1.5", git = "https://github.com/oluseun-consult/rpc-agent-custom", features = ["tracing"] }
# rpc-agent = { version = "0.1.5", path = "../../../GitHub/rpc-agent-custom", features = ["tracing"] }

tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"

dotenv = "0.15.0"
envy = "0.4.2"

rig-core = "0.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
